# compendia

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CompendiaDOxygen  LuminismDOxygen  PACKAGING.md  README.md  VERSIONING.md  _c_l_a_u_d_e_8md.html  _p_a_c_k_a_g_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  _v_e_r_s_i_o_n_i_n_g_8md.html  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutdialog_8cpp.html  aboutdialog_8h.js  aboutdialog_8h__dep__incl.map  aboutdialog_8h__dep__incl.md5  aboutdialog_8h__incl.map  aboutdialog_8h_source.html  class_about_dialog.js  class_about_dialog__inherit__graph.map  class_about_dialog__inherit__graph.md5  class_clickable_label__inherit__graph.map  class_clickable_label__inherit__graph.md5  class_compendia_core-members.html  class_compendia_core.html  class_compendia_core__coll__graph.map  class_compendia_core__inherit__graph.md5  class_compendia_core_a4145e9c6809094544c45f8a3a2fcf180_cgraph.map  class_compendia_core_a76277bedc09c6d3fa112620cad940151_icgraph.map  class_compendia_core_a76277bedc09c6d3fa112620cad940151_icgraph.md5  class_compendia_core_a9ea5b72a3da4d89678635d1ea8972a03_cgraph.md5  class_compendia_core_a9fe93be3e6f05b1d8901f307f09a0880_cgraph.map  class_compendia_core_a9fe93be3e6f05b1d8901f307f09a0880_icgraph.md5  class_compendia_core_ab1bfb52f20623c4aaca07a3ddda3a513_cgraph.map  class_compendia_core_ab3abeb957ed6015b509e1022568377de_icgraph.map  class_compendia_core_ab45cd00fe04fbc92f6bd6c67b3fd6e66_cgraph.map  (+595 more)
.github/workflows/: docs.yml
Luminism/: CMakeLists.txt  Luminism.qmlproject  Luminism.qmlproject.qtds  Luminism.qrc  qds.cmake
Luminism/App/: luminismcore.cpp  luminismcore.h  main.cpp  tag.cpp  tag.h  tagfamily.cpp  tagfamily.h  taggedfile.cpp  taggedfile.h  taggedfilecollection.cpp  taggedfilecollection.h  tagset.cpp  tagset.h
Luminism/App/autogen/: environment.h
Luminism/Luminism/: CMakeLists.txt  Constants.qml  qmldir
Luminism/Luminism/designer/: plugin.metainfo
Luminism/LuminismContent/: App.qml  CMakeLists.txt  Image_preview.ui.qml  Main.ui.qml  Screen01.ui.qml  Tag_pill.ui.qml
cmake/: AppImage.cmake  DownloadLinuxDeploy.cmake  DownloadModels.cmake  Packaging.cmake
docs/html/: _c_l_a_u_d_e_8md.html  _r_e_a_d_m_e_8md.html  aboutdialog_8cpp.html  aboutdialog_8cpp__incl.map  aboutdialog_8cpp__incl.md5  aboutdialog_8h.html  aboutdialog_8h__incl.md5  aboutdialog_8h_source.html  annotated.html  annotated_dup.js  class_about_dialog-members.html  class_about_dialog.html  class_about_dialog__inherit__graph.map  class_about_dialog__inherit__graph.md5  class_clickable_label-members.html  class_clickable_label.html  class_clickable_label.js  class_clickable_label__coll__graph.md5  class_clickable_label__inherit__graph.map  class_clickable_label_a49e69616b4bd73cb64ae0d1946bf6b2e_icgraph.map  class_clickable_label_a49e69616b4bd73cb64ae0d1946bf6b2e_icgraph.md5  class_clickable_label_ac5a79122f2c24b65a4080652f0641c34_cgraph.map  class_clickable_label_ac5a79122f2c24b65a4080652f0641c34_cgraph.md5  class_compendia_core-members.html  class_compendia_core.js  class_compendia_core_a0ce8ff76fc0457058162381e4bf4331f_cgraph.map  class_compendia_core_a1c32ba0f603caecb8cc8d52233f3603b_cgraph.map  class_compendia_core_a1c32ba0f603caecb8cc8d52233f3603b_cgraph.md5  class_compendia_core_a1c32ba0f603caecb8cc8d52233f3603b_icgraph.map  class_compendia_core_a1c32ba0f603caecb8cc8d52233f3603b_icgraph.md5  class_compendia_core_a4145e9c6809094544c45f8a3a2fcf180_cgraph.md5  class_compendia_core_a4145e9c6809094544c45f8a3a2fcf180_icgraph.map  class_compendia_core_a4145e9c6809094544c45f8a3a2fcf180_icgraph.md5  class_compendia_core_a568072953f671155a65d020732277e78_icgraph.map  class_compendia_core_a568072953f671155a65d020732277e78_icgraph.md5  class_compendia_core_a59ad1f5d267dd567fdbcaf7cb71510e4_cgraph.map  class_compendia_core_a59ad1f5d267dd567fdbcaf7cb71510e4_cgraph.md5  class_compendia_core_a5ee748e28577573181f5a442a71e2f29_cgraph.map  class_compendia_core_a5ee748e28577573181f5a442a71e2f29_cgraph.md5  class_compendia_core_a797e7ab9f7b0c18348eb182c08abb980_cgraph.map  (+888 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+84 more)
gitbook/: README.md  SUMMARY.md  automatic-dates.md  deduplication.md  facial-recognition.md  faq.md  filtering-and-navigation.md  getting-started.md  image-preview.md  search.md  tagging-files.md
msix/: AppxManifest.xml
releasenotes/: release-notes-0.1.2.md
resources/: compendia.qss  luminism.qss
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_2.js  enumvalues_3.js  enumvalues_6.js  enumvalues_7.js  files_1.js  files_8.js  files_a.js  files_c.js  functions_0.js  functions_1.js  (+36 more)
